src/appInit.scss
@use 'sass:math';
@use './others/variables.scss' as *;

#app {
  width: 100vw !important;
  height: 100vh !important;
  padding: 0 !important;
  margin: 0 !important;
  overflow: hidden;
  box-sizing: border-box;
  background-color: var(--bs-gray-800);
  color: var(--bs-white);

  & * {
    user-select: none;
  }

  & .app-selectable-text,
  & .app-selectable-text * {
    user-select: text !important;
  }

  & #app-header {
    width: 100% !important;
    height: $header-height !important;
    overflow: hidden;

    .highlight-border-bottom {
      border-bottom: 1px solid var(--bs-gray-600);
    }
  }

  & #app-body {
    width: 100% !important;
    height: calc(100% - $header-height) !important;
    overflow: hidden;
    background-color: var(--bs-gray-700);
    padding: 2px;
  }

  & > .footer {
    height: 5px;
    background-color: var(--bs-dark);
  }

  .flex {
    display: flex;
    overflow: hidden;

    &.h {
      flex-direction: row;
    }

    &.v {
      flex-direction: column;
    }
  }

  .app-full-view {
    position: fixed !important;
    background-color: var(--bs-gray-800) !important;
    top: 0 !important;
    left: 0 !important;
    width: 100vw !important;
    height: 100vh !important;
    overflow-y: auto !important;
    z-index: $z-index-widget-full-view !important;
  }

  .flex-item {
    display: flex;
    position: relative;
    overflow: hidden;
    min-width: 120px;
  }

  * {
    box-sizing: border-box;
  }

  .right {
    padding: 0;

    .card-body,
    .card-footer {
      padding: 0;
    }
  }

  .pointer {
    cursor: pointer;
  }

  .background-blank {
    background-image:
      linear-gradient(45deg, rgba(204, 204, 204, 0.5) 25%, transparent 25%),
      linear-gradient(-45deg, rgba(204, 204, 204, 0.5) 25%, transparent 25%),
      linear-gradient(45deg, transparent 75%, rgba(204, 204, 204, 0.5) 75%),
      linear-gradient(-45deg, transparent 75%, rgba(204, 204, 204, 0.5) 75%);
    background-size: 20px 20px;
    background-position:
      0 0,
      0 10px,
      10px -10px,
      -10px 0px;
  }

  .rotating {
    i:before {
      animation: rotating-hover 1s linear infinite;

      @keyframes rotating-hover {
        from {
          transform: rotate(0deg);
        }

        to {
          transform: rotate(360deg);
        }
      }
    }
  }

  .rotating-hover:hover {
    i:before {
      animation: rotating-hover 1s linear infinite;

      @keyframes rotating-hover {
        from {
          transform: rotate(0deg);
        }

        to {
          transform: rotate(360deg);
        }
      }
    }
  }

  .overflow-hidden {
    overflow: hidden;
  }

  .overflow-hidden-x {
    overflow-x: hidden;
  }

  .overflow-hidden-y {
    overflow-y: hidden;
  }

  .app-border-white-round {
    border: 1px solid var(--bs-gray-600);
    border-radius: 5px;
  }
  .app-border-whiter-round {
    border: 1px dashed var(--bs-gray-400);
    border-radius: 5px;
  }

  $bg-color1: var(--bs-gray-700);
  $bg-color2: var(--bs-gray-800);
  $bg-width: 60px;

  .blank-bg {
    background-image:
      linear-gradient(45deg, $bg-color1 25%, $bg-color2 25%),
      linear-gradient(-45deg, $bg-color1 25%, $bg-color2 25%),
      linear-gradient(45deg, $bg-color2 75%, $bg-color1 75%),
      linear-gradient(-45deg, $bg-color2 75%, $bg-color1 75%);
    background-size: $bg-width $bg-width;
    background-position:
      0 0,
      0 #{math.div($bg-width, 2)},
      #{math.div($bg-width, 2)} -#{math.div($bg-width, 2)},
      -#{math.div($bg-width, 2)} 0px;
  }

  .app-ellipsis-left {
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
    direction: rtl;
    text-align: left;
  }

  .app-ellipsis {
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
  }

  .drag-receiving {
    background-color: green;
  }

  .highlight-selected {
    border: 1px dashed $hight-light-color;
  }

  .hidden-widget {
    width: 100%;
    height: 100%;
    transition:
      width 0.3s,
      height 0.3s,
      background-color 0.3s;
    transition-timing-function: step-end;
    $bg-color: var(--bs-gray-700);
    $bg-color-hover: var(--bs-gray-600);
    $color: var(--bs-gray-800);

    padding: 3px;
    border-radius: 5px;
    background-color: $bg-color;
    background: repeating-linear-gradient(
      45deg,
      $color,
      $color 4px,
      $bg-color 2px,
      $bg-color 8px
    );

    &.bar-type-v {
      height: 6px;

      &:hover {
        height: 10px;
      }
    }

    &.bar-type-h {
      width: 6px;
      writing-mode: vertical-rl;

      &:hover {
        width: 10px;

        * {
          line-height: 5px;
        }
      }
    }

    &:hover {
      background: repeating-linear-gradient(
        45deg,
        $color,
        $color 4px,
        $bg-color-hover 2px,
        $bg-color-hover 8px
      );

      * {
        font-size: 10px;
        color: var(--bs-gray-100);
      }
    }

    *:not(.hidden-context) {
      display: none;
    }

    * {
      width: 100%;
      position: relative;
      text-align: center;
      font-size: 5px;
      transition: font-size 0.3s;
      transition-timing-function: step-end;
      padding: 0;
      margin: auto;
      color: var(--bs-gray-400);
      line-height: 0;
    }
  }

  .app-popup-full {
    position: fixed;
    top: 0;
    left: 0;
    width: 100vw;
    height: 100vh;
    z-index: $z-index-popup-full-screen;
  }

  .auto-hide {
    background-color: transparent;

    & > div {
      transform: translateY(100%);
      transition:
        transform 0.3s,
        backdrop-filter 2s,
        background-color 2s;
      transition-timing-function: step-end;
    }

    &:hover {
      background-color: rgba(255, 255, 255, 0.1);
      backdrop-filter: blur(5px);

      & > div {
        transform: translateY(0);
      }
    }

    &.auto-hide-bottom {
      position: absolute;
      bottom: 0;
      left: 0;
      width: 100%;
    }
  }

  .app-focusable {
    &:focus {
      border: 1px solid var(--bs-primary);
    }
  }

  .highlight-star::after {
    content: '*';
    color: $hight-light-color;
  }
}

